# dbot

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  biome.json  mise.toml  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: agent-harness-plan.md  config-plan.md
config/: credentials.yaml.example  enabled_packs.yaml.example  llm.yaml.example
dbot/: __init__.py  audit.py  server.py
dbot/agent/: __init__.py  chat.py  cli.py  deps.py  guardrails.py  models.py  report.py  responder.py  web.py
dbot/agent/ingestion/: __init__.py  cli.py  watcher.py
dbot/config/: __init__.py  api.py  db.py  defaults.py  encryption.py  models.py  settings.html
dbot/credentials/: __init__.py  models.py  store.py
dbot/registry/: __init__.py  catalog.py  indexer.py  models.py
dbot/runtime/: __init__.py  common_server.py  demistomock.py  executor.py  runner.py
dbot/tools/: __init__.py  invoke.py  meta.py  search.py
dbot/ui/: PROTOCOL.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dbot/ui/src/: App.tsx  index.css  main.tsx
dbot/ui/src/components/: ChatInput.tsx  CredentialDialog.tsx  HistorySidebar.tsx  MarkdownContent.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallBadge.tsx  ToolCallCard.tsx  TypingIndicator.tsx
dbot/ui/src/components/__tests__/: ChatInput.test.tsx  CredentialDialog.test.tsx  MessageBubble.test.tsx  MessageList.test.tsx  ToolCallBadge.test.tsx  ToolCallCard.test.tsx
dbot/ui/src/hooks/: useChat.ts  useChatHistory.ts  useModels.ts
dbot/ui/src/pages/: ChatPage.tsx  SettingsPage.tsx
docs/: architecture.md  compose.yml  credentials.md  hosting-comparison.md  integrations.md  pydantic_ai_ir_agent_reference.md  quickstart.md  sqlite-deployment-strategies.md
tests/: conftest.py  test_audit.py  test_catalog.py  test_common_server.py  test_credential_store.py  test_demistomock.py  test_distutils_shim.py  test_e2e.py  test_e2e_web_flow.py  test_executor.py  test_executor_modes.py  test_executor_systemexit.py  test_hitl.py  test_indexer.py  test_indexer_cache.py  test_models.py  test_spa.py  test_startup.py  test_web_chat.py
tests/agent/: conftest.py  test_integration.py
tests/config/: conftest.py  test_api.py  test_db.py  test_defaults.py  test_encryption.py  test_models.py  test_providers.py
tests/integrations/: test_helloworld.py
