[project]
name = "dbot"
dynamic = ["version"]
description = "Run 1,100+ XSOAR security integrations as MCP tools. No XSOAR required."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["mcp", "xsoar", "security", "integrations", "demisto"]
dependencies = [
    "cryptography>=42.0",
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "watchdog>=4.0",
    "uvicorn>=0.30",
]

[project.scripts]
dbot-chat = "dbot.agent.cli:chat_app"
dbot-respond = "dbot.agent.cli:respond_app"
dbot-watch = "dbot.agent.cli:watch_app"
dbot-web = "dbot.agent.cli:web_app_typer"

[project.urls]
Documentation = "https://github.com/omercnet/dbot#readme"
Issues = "https://github.com/omercnet/dbot/issues"
Source = "https://github.com/omercnet/dbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Hatch version management ──────────────────────────────────────────
# Reads __version__ from dbot/__init__.py
# Bump with: hatch version minor | major | patch | 0.2.0

[tool.hatch.version]
path = "dbot/__init__.py"

# ── Hatch environments ────────────────────────────────────────────────

# Default dev environment — testing + linting
[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-subtests>=0.13",
    "ruff>=0.11",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "dateparser>=1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/} -v"
test-quick = "pytest tests/ -q --ignore=tests/integrations"
cov = "pytest tests/ --cov=dbot --cov-report=term-missing --cov-report=html {args}"
lint = [
    "ruff check dbot/ tests/",
    "ruff format --check dbot/ tests/",
]
lint-ui = "npm run --prefix dbot/ui check"
fmt = [
    "ruff check --fix dbot/ tests/",
    "ruff format dbot/ tests/",
]
fmt-ui = "npm run --prefix dbot/ui lint:fix"
typecheck = "mypy dbot/"
build-ui = "npm run --prefix dbot/ui build"
test-ui = "npm run --prefix dbot/ui test"
dev = "npm run --prefix dbot/ui build && dbot-web"
dev-api = "dbot-web"
check = [
    "lint",
    "lint-ui",
    "test-quick",
]
check-strict = [
    "lint",
    "lint-ui",
    "typecheck",
    "test-quick",
]
ci = [
    "lint",
    "lint-ui",
    "typecheck",
    "build-ui",
    "test",
]
hooks = "pre-commit install"

# Test matrix — run across Python versions
[tool.hatch.envs.test]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "dateparser>=1.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests/} -v"
cov = "pytest tests/ --cov=dbot --cov-report=term-missing {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.13", "3.14"]

# Types environment — isolated mypy
[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy dbot/ {args}"

# ── Ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    # TCH skipped — PydanticAI introspects type annotations at runtime
    "ARG",  # flake8-unused-arguments
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning
]
ignore = [
    "S101",    # assert — allowed in tests (per-file-ignores)
    "RET504",  # unnecessary assign before return — readability
    "ARG001",  # unused function arg — callbacks/overrides/Starlette handlers
    "ARG002",  # unused method arg — callbacks/overrides
    "PLC0415", # import not at top-level — lazy imports are intentional (perf + circular deps)
    "A002",    # argument shadows builtin — 'type' is a common domain arg
    "PLW1641", # no __hash__ — shim classes don't need it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108", "ARG", "PT004"]
"dbot/agent/cli.py" = ["B008", "T20"]  # typer.Option() in defaults + print for CLI
"dbot/agent/web.py" = ["ARG001", "PLW0603"]  # Starlette handler sig + lazy module __getattr__
"dbot/agent/guardrails.py" = ["ARG005"]  # lambda signature required by approval_required()
"dbot/runtime/runner.py" = ["T20"]  # subprocess output requires print
"dbot/runtime/common_server.py" = ["PLW0603"]  # bootstrap guard requires global
"dbot/runtime/demistomock.py" = ["S108"]  # mock uses /tmp paths intentionally
"dbot/config/api.py" = ["PLW0603"]  # module-level state pattern (init_api_state)
"dbot/agent/ingestion/watcher.py" = ["ARG005"]  # watchdog callback signature
"dbot/registry/indexer.py" = ["S603", "S607"]  # subprocess.run for git hash is intentional

[tool.ruff.lint.isort]
known-first-party = ["dbot"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

# ── Pytest ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

# ── Coverage ──────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["dbot"]
omit = ["dbot/runtime/runner.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
